--- a/ERP/templates/partials/left-sidebar.html
+++ b/ERP/templates/partials/left-sidebar.html
@@ -60,6 +60,11 @@
                             </a>
                         </li>
                         {% endif %}
+                         <li>
+                            <a href="{% url 'accounting:purchase_invoice_new_enhanced' %}">
+                                Generic Purchase Entry
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <!-- Accounting Section -->
